# ChessEngine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: tests.yml
src/: CMakeLists.txt  attacks.cpp  attacks.hpp  board.cpp  board.hpp  castling.cpp  castling.hpp  castling_rights.hpp  color.hpp  constants.hpp  debug.hpp  eval.cpp  eval.hpp  fen_parser.hpp  grid.hpp  main.cpp  move.hpp  movegen.cpp  movegen.hpp  moveorderer.cpp  moveorderer.hpp  movepick.cpp  movepick.hpp  perft.cpp  perft.hpp  piece.cpp  piece.hpp  search.cpp  search.hpp  square.hpp  thread.hpp  tt.cpp  tt.hpp  uci.hpp  zobrist.hpp
src/misc/: bits.hpp  find_magics.hpp  misc.hpp
src/utils/: bits.cpp  bits.hpp  magicgen.cpp  magicgen.hpp  randomgen.hpp
test/: CMakeLists.txt  bits.cpp  board.cpp  castling.cpp  color.cpp  grid.cpp  main.cpp  move.cpp  perft.cpp  piece.cpp  zobrist.cpp
